--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,11 +14,13 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  color: white;
+  background: rgb(14, 13, 14);
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: white;
+  background: rgb(14, 13, 14);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
